feat(menu): add menu
